feat: minecraft-mod-pack-update